--- a/textsnippetsrc.example
+++ b/textsnippetsrc.example
@@ -1,3 +1,4 @@
+# vim: ft=desktop tw=0
 [general]
 ## Hotkey to use
 # Can use a name or integer here
@@ -14,8 +15,12 @@ delay = 0.1
 # The special snippet values snippet:quit and snippet:reload quit the program
 # and reload the config file respectively
 [snippets]
-quit=snippet:quit
-reload=snippet:reload
 test=Testing 1..2..3
+testdesc=Test snippet
+
 hi=Hello World!
-sym=!@#$%^&*()-=_+[]{};\':"<>,./?|\\`~
+hidesc=You always have to have a Hello World!
+
+# Note the % needs escaping, but no other symbol does
+sym=!@#$%%^&*()-=_+[]{};':"<>,./?|\`~
+symdesc=Test all symbols
